--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
-apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 repositories {
     // Standard Maven
@@ -24,7 +24,9 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
-
+    compile 'org.apache.avro:avro-tools:1.7.4'
+    compile 'org.apache.avro:avro-mapred:1.7.4'
+    compile 'com.twitter:parquet-avro:1.0.1'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
