--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,20 @@
  */
 
 // Apply the java plugin to add support for Java
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar;
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'com.github.johnrengelman.shadow'
+//mainClassName: 'com.avro.AvroToParquetConversion'
+
+buildscript {
+repositories { jcenter() }
+dependencies {
+classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.1'
+}
+}
+
 
 repositories {
     // Standard Maven
@@ -17,16 +29,23 @@ repositories {
     maven {
         url "https://repository.cloudera.com/artifactory/cloudera-repos/"
     }
+   flatDir {
+           dirs "lib"
+   }
 }
 
+dependencies {
+ compile 'org.gradle:avro-mapred-1.7.4-hadoop2'
+ // Once the artifact is available this should be removed and artifact should be added.
+}
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
-    compile 'org.apache.avro:avro-tools:1.7.4'
-    compile 'org.apache.avro:avro-mapred:1.7.4'
-    compile 'com.twitter:parquet-avro:1.0.1'
+ 
+  compile 'com.twitter:parquet-avro:1.5.0'
+
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
@@ -34,12 +53,22 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
+
 dependencies {
     compile "org.apache.hadoop:hadoop-client:2.2.0"
+
     testCompile "junit:junit:4.8.2"
+}
+
+
+jar {
+manifest {
+attributes 'Main-Class': 'com.avro.AvroToParquetConversion'
+}
 }
 
 task showMeCache << {
     configurations.compile.each { println it }
 }
+
 
