--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.7'
- 
+    compile 'org.ostermiller:utils:1.07.00'
   compile 'com.twitter:parquet-avro:1.5.0'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
@@ -63,7 +63,7 @@ dependencies {
 
 jar {
 manifest {
-attributes 'Main-Class': 'com.avro.AvroToParquetConversion'
+attributes 'Main-Class': 'com.csv.ParquetToCsv'
 }
 }
 
