--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 
 jar {
 manifest {
-attributes 'Main-Class': 'com.csv.ParquetToCsv'
+attributes 'Main-Class': 'com.avro.TextToAvro'
 }
 }
 
