This code needs to be fixed to convert string to GenericRecord.

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 
 jar {
 manifest {
-attributes 'Main-Class': 'com.avro.TextToAvro'
+attributes 'Main-Class': 'com.avro.TextToAvro_2'
 }
 }
 
